public interface PriceCode {
    double getPrice(int days);
    double getFrequentRenterPoints();
}
